# accounting-of-items

./: README.md
equipment_In_UUPPO/: CMakeLists.txt  addMan.h  addManReg.cpp  additem.cpp  additem.h  additem.ui  additemkomp.cpp  additemkomp.h  additemkomp.ui  addman.cpp  addman.h  addman.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
